0.02
 - Add variable stow directory by -d command option.
 - Regen example.

0.01 2021-06-08T18:29:29+02:00
 - First version.