@@ -64,6 +64,13 @@ Command name (e.g. openssl).
 
 =back
 
+=head1 ERRORS
+
+ Command '%s' doesn't use stow.
+ Command '%s' don't use 'bin/sbin' path.
+ Command '%s' not found.
+ Stow directory '%s' doesn't exist.
+
 =head1 EXAMPLE1
 
  stow-check -h
