@@ -1,4 +1,5 @@
 0.02
+ - Add ERRORS section to doc.
  - Add variable stow directory by -d command option.
  - Regen example.
 
